# MLSensorFaultDetection

./: .gitignore  README.md  generate_pyproject.py  hello.py  pyproject.toml  pyproject.toml.template  requirements.txt
AIUtiils/: constants.py  datamodel.py  db_connectors.py  exceptions.py  io.py  logger.py  requirements.txt  scikit_learn.py  transformation.py  types.py  validation.py
AIUtiils/Tests/: test_db_connectors.py  test_sk_learn.py
Tests/common/: test_generate_pyproject.py
Tests/components/: test_data_ingestion.py
sensor/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
sensor/constants/: db.py
sensor/constants/common/: app.py  db.py  env.py
sensor/constants/pipeline/: training.py
sensor/datamodels/: artifact.py  config.py
sensor/entity/: artifact_entity.py  config_entity.py
sensor/ml/: metrix.py
sensor/pipeline/: training.py
utils/: constants.py  db_connectors.py  exceptions.py  logger.py  parse.py  scikit_learn.py  types.py
utils/Tests/: test_db_connectors.py
