[project]
name = "capstoneproject-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "request", "pandas", "numpy", "pymongo",]

[project.optional-dependencies]
dev = [ "pytest",]

[tool.setuptools.packages.find]
include = [ "sensor*", "MLSharedUtils*",]
exclude = [ "Tests*",]
